--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Football</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="/Style Sheet/style1.css">
 </head>
 
 <body>
-    <a href="/Upcoming Match/upcoming.html">Upcoming Match</a>
+    <a href="upcoming.html">Upcoming Match</a>
 </body>
 
 </html>
