--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Football</title>
-    <link rel="stylesheet" href="/Style Sheet/style1.css">
+    <title>Blog</title>
+
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="/CSS/style1.css">
+
+    <!-- Google Font Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
     <a href="upcoming.html">Upcoming Match</a>
+    <h1>hello</h1>
 </body>
 
 </html>
