--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,12 +15,239 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 
+    <!-- Font awesome kit -->
+    <script src="https://kit.fontawesome.com/9a5a4db17b.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-    <a href="upcoming.html">Upcoming Match</a>
-    <h1>hello</h1>
+    <div class="main-body">
+
+        <!-- Header Section -->
+        <header class="container1">
+            <div class="header-section">
+                <div class="header-text">
+                    <h1 class="title">
+                        The Greatest show on the earth
+                    </h1>
+                    <p class="description">
+                        The World Cup, often called as the Greatest
+                        show on the
+                        earth, is an international association football
+                        competition contested by the FIFA.The championship
+                        has been awarded every four years since the inaugural tournament in 1930.
+                    </p> <br>
+                    <a href="#" class="button">Watch Live ></a>
+                </div>
+                <div class="header-image">
+                    <img src="/Images/Banner Image.png" alt="">
+                </div>
+            </div>
+        </header>
+
+        <!-- Menu Section -->
+        <main class="container2">
+            <section class="menu-section">
+                <div>
+                    <a href="#" class="menu-button one ">Upcoming Match</a>
+                </div>
+                <div>
+                    <a href="#" class="menu-button two ">All Group</a>
+                </div>
+                <div>
+                    <a href="#" class="menu-button three">Blog</a>
+                </div>
+            </section>
+
+            <section class="blog-section">
+                <div class="all-blog">
+
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+
+                        <div class="details">
+                            <br><a href="#">Transfer</a>
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <div class="clock">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="chat">
+                                    <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+
 </body>
+
+<!-- Footer Section -->
+<footer>
+    <h1>Goal</h1>
+    <hr>
+    <div class="text">
+        <span>Contract us</span>
+        <span>Terms of Service</span>
+        <span>Privacy Policy</span>
+        <span>Privacy Settings</span>
+        <span>Goal App</span>
+        <span>Goal Live</span>
+    </div>
+    <div class="social">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram-square"></i>
+    </div>
+</footer>
 
 </html>
