--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Blog</title>
 
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="/CSS/style1.css">
+    <link rel="stylesheet" href="style1.css">
 
     <!-- Google Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
