--- a/Code/index.html
+++ b/Code/index.html
@@ -40,7 +40,7 @@
                     <a href="#" class="button">Watch Live ></a>
                 </div>
                 <div class="header-image">
-                    <img src="/Images/Banner Image.png" alt="">
+                    <img src="Images/Banner Image.png" alt="">
                 </div>
             </div>
         </header>
@@ -63,7 +63,7 @@
                 <div class="all-blog">
 
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div class="single-blog">
-                        <div class="thumbnail"><img src="/Images/Blog Image.png"></div>
+                        <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
                             <br><a href="#">Transfer</a>
