--- a/Wtch Football/upcoming.html
+++ b/Wtch Football/upcoming.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Upcoming Matches</title>
 
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style2.css">
 
     <!-- Google Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,6 +59,7 @@
                 </div>
             </section>
 
+            <!-- Blog Section -->
             <section class="blog-section">
                 <div class="all-blog">
 
