image issue solved

--- a/Watch Football/index.html
+++ b/Watch Football/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upcoming Matches</title>
+    <title>Blog</title>
 
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style1.css">
 
     <!-- Google Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,13 +49,13 @@
         <main class="container2">
             <section class="menu-section">
                 <div>
-                    <a href="#" class="menu-button one ">Upcoming Match</a>
+                    <a href="upcoming.html" target="_blank" class="menu-button one ">Upcoming Match</a>
                 </div>
                 <div>
                     <a href="#" class="menu-button two ">All Group</a>
                 </div>
                 <div>
-                    <a href="#" class="menu-button three">Blog</a>
+                    <a href="#" class="menu-button three ">Blog</a>
                 </div>
             </section>
 
