--- a/Watch Football/index.html
+++ b/Watch Football/index.html
@@ -33,9 +33,8 @@
                     <p class="description">
                         The World Cup, often called as the Greatest
                         show on the
-                        earth, is an international association football
-                        competition contested by the FIFA.The championship
-                        has been awarded every four years since the inaugural tournament in 1930.
+                        earth, is an international
+                        competition contested by the FIFA.
                     </p> <br>
                     <a href="#" class="button">Watch Live ></a>
                 </div>
@@ -55,7 +54,7 @@
                     <a href="#" class="menu-button two ">All Group</a>
                 </div>
                 <div>
-                    <a href="#" class="menu-button three ">Blog</a>
+                    <a href="#" class="menu-button three">Blog</a>
                 </div>
             </section>
 
@@ -170,7 +169,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="single-blog">
+                    <div class="single-blog hide">
                         <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
@@ -188,7 +187,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="single-blog">
+                    <div class="single-blog hide">
                         <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
@@ -206,7 +205,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="single-blog">
+                    <div class="single-blog hide">
                         <div class="thumbnail"><img src="Images/Blog Image.png"></div>
 
                         <div class="details">
@@ -227,7 +226,9 @@
                 </div>
             </section>
         </main>
+        <div class="special"><a href="#" class="button">View All</a></div>
     </div>
+
 
 </body>
 
