--- a/Watch Football/upcoming.html
+++ b/Watch Football/upcoming.html
@@ -34,8 +34,7 @@
                         The World Cup, often called as the Greatest
                         show on the
                         earth, is an international association football
-                        competition contested by the FIFA.The championship
-                        has been awarded every four years since the inaugural tournament in 1930.
+                        competition contested by the FIFA.
                     </p> <br>
                     <a href="#" class="button">Watch Live ></a>
                 </div>
@@ -55,7 +54,7 @@
                     <a href="#" class="menu-button two ">All Group</a>
                 </div>
                 <div>
-                    <a href="#" class="menu-button three">Blog</a>
+                    <a href="index.html" target="_blank" class="menu-button three">Blog</a>
                 </div>
             </section>
 
