--- a/Watch Football/index.html
+++ b/Watch Football/index.html
@@ -36,7 +36,7 @@
                         earth, is an international
                         competition contested by the FIFA.
                     </p> <br>
-                    <a href="#" class="button">Watch Live ></a>
+                    <a href="#" class="animation">Watch Live ></a>
                 </div>
                 <div class="header-image">
                     <img src="Images/Banner Image.png" alt="">
